--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{ page_title }}</title>
+	<title>Welcome!</title>
   
 </head>
 
 <body>
   <div id="container">
-    {% block body %}
-    {% endblock %}
+    
+
+<h1>
+  Welcome to my website!
+</h1>
+
+
   </div>
 </body>
 
