--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Welcome!</title>
-  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-  <div id="container">
-    
-
-<h1>
-  Welcome to my website!
-</h1>
-
-<h2>
-  Links:
-</h2>
-
-<ul>
-  <li><a href="posts/post1.html">Post 1</a></li>
-  <li><a href="posts/post2.html">Post 2</a></li>
-</ul>
-
-
-  </div>
+  
 </body>
-
 </html>
